refactor: Melhorias no Codigo. 1. Melhorias nas execptions. 2. Melhorias nas classes Escritorio, Unidade, Pessoa e Contrato. 3. Melhorias nas controllers.